--- a/.github/workflows/deploy-on-pull-request.yml
+++ b/.github/workflows/deploy-on-pull-request.yml
@@ -14,8 +14,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Fetch PR comments
-        uses: actions/github-script@v7
         id: fetch-comments
+        uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
@@ -27,7 +27,14 @@ jobs:
               repo,
               issue_number: pr_number,
             });
-            const triggerComment = comments.some(comment => comment.body.toLowerCase().includes("deploy please"));
+
+            // Check if "deploy please" exists and if the author is "heloint"
+            const triggerComment = comments.some(comment =>
+              comment.body.toLowerCase().includes("deploy please") &&
+              comment.user.login === "heloint"
+            );
+
+            console.log(`Trigger comment found: ${triggerComment}`);
             return triggerComment;
 
       - name: Deploy the application
